# uk-pilot-event-templates

./: .bazelrc  .gitattributes  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build-test.yml
data/alpha_1_0/: README.md
src/main/proto/eventtemplates/: BUILD.bazel  common.proto  common_template.proto  display_event.proto  display_template.proto  event.proto  other.proto  other_event.proto  other_template.proto  video_event.proto  video_event_template.proto  video_template.proto
src/main/proto/halo_cmm/uk/pilot/: BUILD.bazel  common_template.proto  event.proto  other_template.proto
