load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "common_template_proto",
    srcs = ["common_template.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_proto",
    ],
)

proto_library(
    name = "display_template_proto",
    srcs = ["display_template.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_proto",
    ],
)

proto_library(
    name = "other_template_proto",
    srcs = ["other_template.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_proto",
    ],
)

proto_library(
    name = "video_template_proto",
    srcs = ["video_template.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_proto",
    ],
)

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        ":common_template_proto",
        ":display_template_proto",
        ":other_template_proto",
        ":video_template_proto",
    ],
)
